tests/integration/error/opaque_bare_struct_field.alo
// expect-error: Opaque type 'Arena' must be used by reference

struct Bad {
    arena: Arena
}

fun main() -> void {
}
